<resources>
    <string name="app_name">Recipe App 3</string>
    <string name="there_is_no_note">There is no recipes</string>
    <string name="search_for_recipes">Search for recipes...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe name...</string>
    <string name="ingredients">Ingredients...</string>
    <string name="instructions">Instructions...</string>
    <string name="add_recipe">Add recipe</string>
    <string name="recipe_details">Recipe details</string>
    <string name="image_path">Image path...</string>
    <string name="filter_recipes">Filter recipes</string>
    <string-array name="cuisine_options">
        <item>Italian</item>
        <item>Japanese</item>
        <item>Indian</item>
        <!-- Adicione outras opções conforme necessário -->
    </string-array>

    <string-array name="category_options">
        <item>Dishe</item>
        <item>Dessert</item>
        <!-- Adicione outras opções conforme necessário -->
    </string-array>
</resources>